<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/ic_iot_logo"
                tools:srcCompat="@drawable/ic_iot_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/newland_test"
                android:textColor="#3E99D2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:text="@string/first_text"
                android:textColor="#3E99D2"
                android:textSize="18sp" />


            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                android:id="@+id/bt_getip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7sp"
                android:padding="10dp"
                android:text="@string/get_local_ip"
                android:textSize="15sp"
                app:rb_backgroundColor="@color/tips"
                app:rb_isRadiusAdjustBounds="true" />


            <TextView
                android:id="@+id/shareapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:text="@string/share_app"
                android:textColor="#3E99D2"
                android:textSize="18sp"
                android:visibility="gone" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:gravity="center"-->
<!--                android:padding="5dp"-->
<!--                android:text="设备标识"-->
<!--                android:textColor="#3E99D2" />-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:id="@+id/token"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="#56A84B" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/copy_token"-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:src="@drawable/copy" />-->
<!--            </LinearLayout>-->

        </LinearLayout>


    </ScrollView>
</LinearLayout>